--- a/assets/fotos/css/modal_fotos.css
+++ b/assets/fotos/css/modal_fotos.css
@@ -1,22 +1,38 @@
 .modal_fotos{
-    position: absolute;
+    position: fixed;
     top: 0;
-    background: rgba(26, 26, 26, 0.8);
+    background: rgba(0, 0, 0, 0.8);
     width: 100%;
     height: 100%;
     display: none;
 }
 
+/* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 .box_image{
     margin: auto;
-    margin-top: 10%;
-    background: rgb(26, 26, 26);
-    width: 50%;
-    height: 58%;
+    margin-top: 7%;
+    width: 100%;
+    max-width: 800px;
+    border: 1px solid white;
 }
 
 .img{
     width: 100%;
-    max-width: 1000px;
-    
 }
