--- a/assets/index/css/style.css
+++ b/assets/index/css/style.css
@@ -1,9 +1,13 @@
+a{
+    text-decoration: none;
+}
+
 .centro{
     background: #000000;
-    background:   linear-gradient(#000a66, #000000, #000a66);
-    background:   -moz-linear-gradient(#000a66, #000000, #000a66);
-    background:   -o-linear-gradient(#000a66, #000000, #000a66);
-    background:   -webkit-linear-gradient(#000a66, #000000, #000a66);
+    background:   linear-gradient(#010026, #000000, #010026);
+    background:   -moz-linear-gradient(#010026, #000000, #010026);
+    background:   -o-linear-gradient(#010026, #000000, #010026);
+    background:   -webkit-linear-gradient(#010026, #000000, #010026);
 }
 
 .centroInterior{
@@ -39,7 +43,7 @@
 #video:hover,
 #musica:hover{
     background-size: 110% 110%;
-    transition: .5s;
+    transition: .3s;
 }
 
 #fotos{
