--- a/assets/musicas/css/style.css
+++ b/assets/musicas/css/style.css
@@ -1,9 +1,9 @@
 .centro{
     background: #000000;
-    background:   linear-gradient(#000a66, #000000, #000a66);
-    background:   -moz-linear-gradient(#000a66, #000000, #000a66);
-    background:   -o-linear-gradient(#000a66, #000000, #000a66);
-    background:   -webkit-linear-gradient(#000a66, #000000, #000a66);
+    background:   linear-gradient(#010026, #000000, #010026);
+    background:   -moz-linear-gradient(#010026, #000000, #010026);
+    background:   -o-linear-gradient(#010026, #000000, #010026);
+    background:   -webkit-linear-gradient(#010026, #000000, #010026);
     padding-bottom: 20px;
 }
 
