--- a/assets/template/css/style.css
+++ b/assets/template/css/style.css
@@ -1,9 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-}
-
-a{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-decoration: none;
 }
 
