--- a/assets/musicas/css/style.css
+++ b/assets/musicas/css/style.css
@@ -1,4 +1,5 @@
-.fundo{
+.centro{
+
     padding-top: 20px;
     background: #000000;
     background:   linear-gradient(#010026, #000000, #010026);
@@ -8,17 +9,6 @@
     padding-bottom: 20px;
 }
 
-.lista{
-    background-color: #ffffff;
-}
-
-.foto{
-    height: inherit;
-}
-
-audio{
-    width: 100%;
-}
 
 span{
     display:none;
